Sat Dec 11 05:20:11 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* util.c (scan_digits): Constify.  What is important here is the
	  data can be accessed simultaneously from multiple VMs.

Sat Dec 11 05:00:32 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* regparse.c (FreeNodeList): is a global static variable and shall
	  be divided into VMs.

	* inits.c (rb_call_inits): ditto.

Sat Dec 11 03:21:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* mvm.c (vm_join): Original condition never reached, because a
	  vm->living_threads will not be freed until the VM is GCed;
	  someone else is joining a VM means it still has the hash.

	* thread.c (thread_start_func_2): Main thread's graceful
	  shutdown neds to finish other threads of the same VM.

	* thread.c (rb_vm_terminate_all_really_everything): This is
	  abnormal shutdown; main thread might already be killed.

Sat Dec 11 01:25:15 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): fixme.  don't know why this is wrong.

Sat Dec 11 01:03:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_free): the condition was wrong.

Sat Dec 11 00:32:02 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (rb_vm_terminate_all_really_everything): New function.
	  On a process termination (not per-VM), termination of all
	  threads, without allowing a sanctuary, is mandatory.

	* vm.c (vm_knockin_on_the_heavens_door): move to thread.c

Sat Dec 11 00:03:58 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): use what we already have.

Fri Dec 10 21:36:08 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_thread_new): might be a yer another merge miss.  A
	  thread made this way was initialized twice.

Fri Dec 10 19:14:44 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (thread_start_func_2): They were double-free.

Fri Dec 10 18:56:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
