@@ -1,3 +1,10 @@
+Sat Dec 11 05:28:52 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* util.c (ACQUIRE_DTOA_LOCK): No free lunch any more; a gentle
+	  locking is needed.
+
+	* inits.c (rb_call_inits): ditto.
+
 Sat Dec 11 05:20:11 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* util.c (scan_digits): Constify.  What is important here is the
